--- a/greetings.html
+++ b/greetings.html
@@ -25,7 +25,7 @@ h1 {
 
 .full-table {
     display: table;
-    height: 100%;
+    height: 180px;
     width: 100%;
 }
 
@@ -36,7 +36,7 @@ h1 {
 }
 
 .card {
-    padding: 100px 25px 10px 25px;
+    padding: 10px 25px 10px 25px;
     border-radius: 10px;
     background: #009688;
     color: #fff;
