--- a/greetings.html
+++ b/greetings.html
@@ -91,7 +91,7 @@ h1 {
 <div class="full-table">
   <div class="table-cell">
     
-    <div class="card">
+    <div class="card" style="text-align:center">
         <div class="greet" id="greet"></div>
       <div class="date" id="date"></div>
       <div class="clock">
