--- a/Photo-gallery/index.html
+++ b/Photo-gallery/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - HTML CSS photo gallery</title>
+  <title>Photo gallery</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
