--- a/Image-slider/index.html
+++ b/Image-slider/index.html
@@ -63,6 +63,16 @@ body {
     center top/cover;
 }
 
+  .slide:nth-child(5) {
+  background: url("5.jpeg") no-repeat
+    center top/cover;
+}
+
+  .slide:nth-child(6) {
+  background: url("6.jpeg") no-repeat
+    center top/cover;
+}
+
 
 .buttons button#prev {
   position: absolute;
