--- a/Image-slider/index.html
+++ b/Image-slider/index.html
@@ -44,7 +44,7 @@ body {
 
 
 .slide:first-child {
-  background: url("4.jpeg") no-repeat
+  background: url("1.jpeg") no-repeat
     center top/cover;
 }
 
@@ -54,12 +54,22 @@ body {
 }
 
 .slide:nth-child(3) {
-  background: url("5.jpeg") no-repeat
+  background: url("3.jpeg") no-repeat
     center top/cover;
 }
 
-  .slide:nth-child(4) {
+.slide:nth-child(4) {
   background: url("4.jpeg") no-repeat
+    center top/cover;
+}
+
+.slide:nth-child(5) {
+  background: url("5.jpeg") no-repeat
+    center top/cover;
+}  
+
+.slide:nth-child(6) {
+  background: url("6.jpeg") no-repeat
     center top/cover;
 }
 
